2ºSemestre/LFA/Projeto/geometrics-lfa-07-master/examples/geometricsaux_tests/semantic_errors/semantic_error_3.geom
geometrics: database

/* Should fail -> FigError: f6 already defined */
f6 is {
    f6 is {
        circle c8 (2,0) 3
    }
} 